数据库支持sqlite，完善acitvity接口，对utils中其他功能添加单元测试
